// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Views YAML includes * (a,b) + exclude id from b 1`] = `
Object {
  "connectedComponent": undefined,
  "description": undefined,
  "dimensions": Array [
    Object {
      "aliasMember": "CubeA.id",
      "description": "Description for CubeA.id",
      "format": "imageUrl",
      "granularities": undefined,
      "isVisible": true,
      "meta": Object {
        "key": "Meta.key for CubeA.id",
      },
      "name": "simple_view.id",
      "primaryKey": false,
      "public": true,
      "shortTitle": "Title for CubeA.id",
      "suggestFilterValues": true,
      "title": "Simple View Title for CubeA.id",
      "type": "number",
    },
    Object {
      "aliasMember": "CubeB.other_id",
      "description": "Description for CubeB.other_id",
      "format": "imageUrl",
      "granularities": undefined,
      "isVisible": true,
      "meta": Object {
        "key": "Meta.key for CubeB.other_id",
      },
      "name": "simple_view.other_id",
      "primaryKey": false,
      "public": true,
      "shortTitle": "Title for CubeB.other_id",
      "suggestFilterValues": true,
      "title": "Simple View Title for CubeB.other_id",
      "type": "number",
    },
  ],
  "folders": Array [],
  "hierarchies": Array [],
  "isVisible": true,
  "measures": Array [
    Object {
      "aggType": "number",
      "aliasMember": "CubeA.count_a",
      "cumulative": false,
      "cumulativeTotal": false,
      "description": "Description for CubeA.count_a",
      "drillMembers": Array [],
      "drillMembersGrouped": Object {
        "dimensions": Array [],
        "measures": Array [],
      },
      "format": "number",
      "isVisible": true,
      "meta": Object {
        "key": "Meta.key for CubeA.count_a",
      },
      "name": "simple_view.count_a",
      "public": true,
      "shortTitle": "Title for CubeA.count_a",
      "title": "Simple View Title for CubeA.count_a",
      "type": "number",
    },
    Object {
      "aggType": "number",
      "aliasMember": "CubeB.count_b",
      "cumulative": false,
      "cumulativeTotal": false,
      "description": "Description for CubeB.count_b",
      "drillMembers": Array [],
      "drillMembersGrouped": Object {
        "dimensions": Array [],
        "measures": Array [],
      },
      "format": "number",
      "isVisible": true,
      "meta": Object {
        "key": "Meta.key for CubeB.count_b",
      },
      "name": "simple_view.count_b",
      "public": true,
      "shortTitle": "Title for CubeB.count_b",
      "title": "Simple View Title for CubeB.count_b",
      "type": "number",
    },
  ],
  "meta": undefined,
  "name": "simple_view",
  "nestedFolders": Array [],
  "public": true,
  "segments": Array [],
  "title": "Simple View",
  "type": "view",
}
`;

exports[`Views YAML includes * + prefix a,b + exclude ids 1`] = `
Object {
  "connectedComponent": undefined,
  "description": undefined,
  "dimensions": Array [
    Object {
      "aliasMember": "CubeB.other_id",
      "description": "Description for CubeB.other_id",
      "format": "imageUrl",
      "granularities": undefined,
      "isVisible": true,
      "meta": Object {
        "key": "Meta.key for CubeB.other_id",
      },
      "name": "simple_view.CubeB_other_id",
      "primaryKey": false,
      "public": true,
      "shortTitle": "Title for CubeB.other_id",
      "suggestFilterValues": true,
      "title": "Simple View Title for CubeB.other_id",
      "type": "number",
    },
  ],
  "folders": Array [],
  "hierarchies": Array [],
  "isVisible": true,
  "measures": Array [
    Object {
      "aggType": "number",
      "aliasMember": "CubeA.count_a",
      "cumulative": false,
      "cumulativeTotal": false,
      "description": "Description for CubeA.count_a",
      "drillMembers": Array [],
      "drillMembersGrouped": Object {
        "dimensions": Array [],
        "measures": Array [],
      },
      "format": "number",
      "isVisible": true,
      "meta": Object {
        "key": "Meta.key for CubeA.count_a",
      },
      "name": "simple_view.CubeA_count_a",
      "public": true,
      "shortTitle": "Title for CubeA.count_a",
      "title": "Simple View Title for CubeA.count_a",
      "type": "number",
    },
    Object {
      "aggType": "number",
      "aliasMember": "CubeB.count_b",
      "cumulative": false,
      "cumulativeTotal": false,
      "description": "Description for CubeB.count_b",
      "drillMembers": Array [],
      "drillMembersGrouped": Object {
        "dimensions": Array [],
        "measures": Array [],
      },
      "format": "number",
      "isVisible": true,
      "meta": Object {
        "key": "Meta.key for CubeB.count_b",
      },
      "name": "simple_view.CubeB_count_b",
      "public": true,
      "shortTitle": "Title for CubeB.count_b",
      "title": "Simple View Title for CubeB.count_b",
      "type": "number",
    },
  ],
  "meta": undefined,
  "name": "simple_view",
  "nestedFolders": Array [],
  "public": true,
  "segments": Array [],
  "title": "Simple View",
  "type": "view",
}
`;

exports[`Views YAML includes * + prefix a,b,c 1`] = `
Object {
  "connectedComponent": undefined,
  "description": undefined,
  "dimensions": Array [
    Object {
      "aliasMember": "CubeA.id",
      "description": "Description for CubeA.id",
      "format": "imageUrl",
      "granularities": undefined,
      "isVisible": true,
      "meta": Object {
        "key": "Meta.key for CubeA.id",
      },
      "name": "simple_view.CubeA_id",
      "primaryKey": false,
      "public": true,
      "shortTitle": "Title for CubeA.id",
      "suggestFilterValues": true,
      "title": "Simple View Title for CubeA.id",
      "type": "number",
    },
    Object {
      "aliasMember": "CubeB.id",
      "description": "Description for CubeB.id",
      "format": "imageUrl",
      "granularities": undefined,
      "isVisible": true,
      "meta": Object {
        "key": "Meta.key for CubeB.id",
      },
      "name": "simple_view.CubeB_id",
      "primaryKey": false,
      "public": true,
      "shortTitle": "Title for CubeB.id",
      "suggestFilterValues": true,
      "title": "Simple View Title for CubeB.id",
      "type": "number",
    },
    Object {
      "aliasMember": "CubeB.other_id",
      "description": "Description for CubeB.other_id",
      "format": "imageUrl",
      "granularities": undefined,
      "isVisible": true,
      "meta": Object {
        "key": "Meta.key for CubeB.other_id",
      },
      "name": "simple_view.CubeB_other_id",
      "primaryKey": false,
      "public": true,
      "shortTitle": "Title for CubeB.other_id",
      "suggestFilterValues": true,
      "title": "Simple View Title for CubeB.other_id",
      "type": "number",
    },
  ],
  "folders": Array [],
  "hierarchies": Array [],
  "isVisible": true,
  "measures": Array [
    Object {
      "aggType": "number",
      "aliasMember": "CubeA.count_a",
      "cumulative": false,
      "cumulativeTotal": false,
      "description": "Description for CubeA.count_a",
      "drillMembers": Array [],
      "drillMembersGrouped": Object {
        "dimensions": Array [],
        "measures": Array [],
      },
      "format": "number",
      "isVisible": true,
      "meta": Object {
        "key": "Meta.key for CubeA.count_a",
      },
      "name": "simple_view.CubeA_count_a",
      "public": true,
      "shortTitle": "Title for CubeA.count_a",
      "title": "Simple View Title for CubeA.count_a",
      "type": "number",
    },
    Object {
      "aggType": "number",
      "aliasMember": "CubeB.count_b",
      "cumulative": false,
      "cumulativeTotal": false,
      "description": "Description for CubeB.count_b",
      "drillMembers": Array [],
      "drillMembersGrouped": Object {
        "dimensions": Array [],
        "measures": Array [],
      },
      "format": "number",
      "isVisible": true,
      "meta": Object {
        "key": "Meta.key for CubeB.count_b",
      },
      "name": "simple_view.CubeB_count_b",
      "public": true,
      "shortTitle": "Title for CubeB.count_b",
      "title": "Simple View Title for CubeB.count_b",
      "type": "number",
    },
  ],
  "meta": undefined,
  "name": "simple_view",
  "nestedFolders": Array [],
  "public": true,
  "segments": Array [],
  "title": "Simple View",
  "type": "view",
}
`;

exports[`Views YAML includes * + prefix b + exclude ids 1`] = `
Object {
  "connectedComponent": undefined,
  "description": undefined,
  "dimensions": Array [
    Object {
      "aliasMember": "CubeB.other_id",
      "description": "Description for CubeB.other_id",
      "format": "imageUrl",
      "granularities": undefined,
      "isVisible": true,
      "meta": Object {
        "key": "Meta.key for CubeB.other_id",
      },
      "name": "simple_view.CubeB_other_id",
      "primaryKey": false,
      "public": true,
      "shortTitle": "Title for CubeB.other_id",
      "suggestFilterValues": true,
      "title": "Simple View Title for CubeB.other_id",
      "type": "number",
    },
  ],
  "folders": Array [],
  "hierarchies": Array [],
  "isVisible": true,
  "measures": Array [
    Object {
      "aggType": "number",
      "aliasMember": "CubeA.count_a",
      "cumulative": false,
      "cumulativeTotal": false,
      "description": "Description for CubeA.count_a",
      "drillMembers": Array [],
      "drillMembersGrouped": Object {
        "dimensions": Array [],
        "measures": Array [],
      },
      "format": "number",
      "isVisible": true,
      "meta": Object {
        "key": "Meta.key for CubeA.count_a",
      },
      "name": "simple_view.count_a",
      "public": true,
      "shortTitle": "Title for CubeA.count_a",
      "title": "Simple View Title for CubeA.count_a",
      "type": "number",
    },
    Object {
      "aggType": "number",
      "aliasMember": "CubeB.count_b",
      "cumulative": false,
      "cumulativeTotal": false,
      "description": "Description for CubeB.count_b",
      "drillMembers": Array [],
      "drillMembersGrouped": Object {
        "dimensions": Array [],
        "measures": Array [],
      },
      "format": "number",
      "isVisible": true,
      "meta": Object {
        "key": "Meta.key for CubeB.count_b",
      },
      "name": "simple_view.CubeB_count_b",
      "public": true,
      "shortTitle": "Title for CubeB.count_b",
      "title": "Simple View Title for CubeB.count_b",
      "type": "number",
    },
  ],
  "meta": undefined,
  "name": "simple_view",
  "nestedFolders": Array [],
  "public": true,
  "segments": Array [],
  "title": "Simple View",
  "type": "view",
}
`;
